overlay/drone/ingress-http/ingress.yaml
#@ load("@ytt:data", "data")
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: server
  namespace: #@ data.values.drone.namespace
spec:
  entryPoints:
  - http
  routes:
  - match: #@ "Host(`{}`)".format(data.values.drone.fqdn)
    kind: Rule
    priority: 12
    services:
    - name: server
      port: 80
      strategy: RoundRobin
